--- a/.github/workflows/verify-pr.yml
+++ b/.github/workflows/verify-pr.yml
@@ -38,6 +38,7 @@ jobs:
         run: pnpm install
         env:
           CI: true
+          NODE_AUTH_TOKEN: ${{ secrets.ANIME_SKIP_PACKAGES_TOKEN }}
 
       - name: Publish Dry Run
         run: pnpm package:dry
