pnpm build is working

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -48,8 +48,7 @@
     "skippable",
     "unitless",
     "unmount",
-    "vrv",
-    "vuex"
+    "vrv"
   ],
   "cSpell.ignoreWords": [
     "asynciterable",
