remove lingering references to `extension/`

--- a/package.json
+++ b/package.json
@@ -23,10 +23,9 @@
     "test:e2e": "echo 'TODO'",
     "lint": "eslint . --ext .ts,.vue --max-warnings 0 --fix",
     "lint:check": "eslint . --ext .js,.ts,.vue --max-warnings 0",
-    "lint:web-ext": "web-ext lint -s extension",
+    "lint:web-ext": "web-ext lint -s dist",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "clean": "rimraf extension/popup extension/options extension/content-scripts extension/background extension/manifest.json",
     "clean:services": "npm run dev:services -V",
     "build": "cross-env BUILD_MODE=prod vite build",
     "build:chrome": "cross-env BUILD_FOR=chrome pnpm build",
