--- a/docker/backend.env.template
+++ b/docker/backend.env.template
@@ -9,7 +9,7 @@ DISABLE_SHOW_ADMIN_DIRECTIVE=true
 ENABLE_COLOR_LOGS=true
 ENABLE_INTROSPECTION=true
 ENABLE_PLAYGROUND=true
-DATABASE_URL=postgres://postgres:password@db:9000/anime_skip_local
+AWS_DATABASE_URL=postgres://postgres:password@db:9000/anime_skip_local
 DATABASE_DISABLE_SSL=true
 DATABASE_ENABLE_SEEDING=true
 DISABLE_EMAILS=true
