--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@types/lodash.merge": "^4.6.6",
     "@types/md5": "^2.3.1",
     "@types/node": "^16.6.0",
+    "@types/rimraf": "^3.0.2",
     "@types/webextension-polyfill": "^0.8.1",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
@@ -92,6 +93,7 @@
     "tailwindcss": "^2.2.7",
     "ts-jest": "^27.0.5",
     "typescript": "^4.3.5",
+    "unplugin-vue-components": "^0.17.2",
     "vite": "^2.6.14",
     "vite-plugin-web-extension": "^0.7.2",
     "vue-global-api": "^0.2.4",
