chore: simplify build process (#168)

--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "pnpm": ">=6"
   },
   "scripts": {
-    "start": "ts-node vite.build.ts --watch --mode test",
-    "start:chrome": "pnpm start -- --for chrome",
+    "start": "vite build --watch",
+    "start:chrome": "cross-env BUILD_FOR=chrome pnpm start",
     "dev": "concurrently --kill-others-on-fail -n extension,services -c magenta,cyan \"pnpm dev:extension\" \"pnpm dev:services\"",
-    "dev:extension": "ts-node vite.build.ts --watch",
-    "dev:chrome": "concurrently --kill-others-on-fail -n extension,services -c magenta,cyan \"pnpm dev:extension -- --for chrome\" \"pnpm dev:services\"",
+    "dev:extension": "cross-env BUILD_MODE=dev pnpm start",
+    "dev:chrome": "concurrently --kill-others-on-fail -n extension,services -c magenta,cyan \"cross-env BUILD_FOR=chrome pnpm dev:extension\" \"pnpm dev:services\"",
     "dev:services": "docker-compose -f docker/docker-compose.yml up --abort-on-container-exit",
     "compile": "vue-tsc --noEmit",
     "test": "jest --runInBand",
@@ -23,18 +23,17 @@
     "test:e2e": "echo 'TODO'",
     "lint": "eslint . --ext .ts,.vue --max-warnings 0 --fix",
     "lint:check": "eslint . --ext .js,.ts,.vue --max-warnings 0",
-    "lint:web-ext": "web-ext lint -s extension",
+    "lint:web-ext": "web-ext lint -s dist",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "clean": "rimraf extension/popup extension/options extension/content-scripts extension/background extension/manifest.json",
     "clean:services": "npm run dev:services -V",
-    "build": "ts-node vite.build.ts --mode prod --for firefox",
-    "build:chrome": "ts-node vite.build.ts --mode prod --for chrome",
-    "build:beta": "ts-node vite.build.ts --mode beta --for firefox",
-    "build:beta:chrome": "ts-node vite.build.ts --mode beta --for chrome",
-    "build:staged": "ts-node vite.build.ts --mode staged --for firefox",
-    "build:staged:chrome": "ts-node vite.build.ts --mode staged --for chrome",
-    "package": "ts-node scripts/package/index.ts",
+    "build": "cross-env BUILD_MODE=prod vite build",
+    "build:chrome": "cross-env BUILD_FOR=chrome pnpm build",
+    "build:beta": "cross-env BUILD_MODE=beta vite build",
+    "build:beta:chrome": "cross-env BUILD_FOR=chrome pnpm build:beta",
+    "build:staged": "cross-env BUILD_MODE=staged vite build",
+    "build:staged:chrome": "cross-env BUILD_FOR=chrome pnpm build:staged",
+    "package": "esno scripts/package/index.ts",
     "package:dry": "cross-env DRY_RUN=true pnpm package",
     "preinstall": "npx only-allow pnpm",
     "prepare": "husky install"
@@ -43,77 +42,62 @@
     "@anime-skip/api-client": "^2.6.1",
     "@anime-skip/ui": "^1.2.6",
     "@anime-skip/usage-stats-client": "^1.1.6",
+    "@vueuse/core": "^5.3.0",
     "async-mutex": "^0.3.2",
     "axios": "^0.24.0",
     "axios-auth-refresh": "^3.1.0",
     "fuzzysort": "^1.1.4",
     "lodash.isequal": "^4.5.0",
     "md5": "^2.3.0",
-    "vite-plugin-components": "^0.13.2",
-    "vite-plugin-icons": "^0.6.5",
     "vue": "^3.2.2",
-    "vue-demi": "^0.11.2",
     "vue-router": "^4.0.11",
     "vue-use-request-state": "^0.2.2",
-    "vuex": "^4.0.2",
-    "webext-bridge": "^4.0.1",
-    "webextension-polyfill-ts": "0.26.0"
+    "webextension-polyfill": "^0.8.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.7.0",
     "@iconify/json": "^1.1.386",
     "@tailwindcss/line-clamp": "^0.2.1",
-    "@types/argparse": "^2.0.10",
-    "@types/download": "8.0.0",
     "@types/fs-extra": "^9.0.12",
     "@types/jest": "^27.0.1",
     "@types/lodash.isequal": "^4.5.5",
+    "@types/lodash.merge": "^4.6.6",
     "@types/md5": "^2.3.1",
     "@types/node": "^16.6.0",
+    "@types/rimraf": "^3.0.2",
+    "@types/webextension-polyfill": "^0.8.1",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
     "@vitejs/plugin-vue": "^1.4.0",
     "@vue/compiler-sfc": "^3.2.2",
-    "@vueuse/core": "^5.3.0",
-    "argparse": "^2.0.1",
     "autoprefixer": "^10.3.1",
-    "body-parser": "1.19.0",
-    "chokidar": "^3.5.2",
-    "commander": "^8.1.0",
     "concurrently": "^6.2.1",
     "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
-    "download": "8.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-only-warn": "^1.0.3",
     "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-vue": "^7.16.0",
-    "esno": "^0.8.0",
-    "express": "4.17.1",
+    "esno": "*",
     "form-data": "^4.0.0",
     "fs-extra": "^10.0.0",
     "husky": "^7.0.1",
     "jest": "^27.2.2",
     "jest-mock-extended": "^2.0.4",
-    "kolorist": "^1.5.0",
-    "npm-run-all": "^4.1.5",
+    "lodash.merge": "^4.6.2",
     "postcss": "^8.3.6",
     "prettier": "^2.3.2",
     "pretty-quick": "^3.1.1",
     "rimraf": "^3.0.2",
-    "safe-compare": "1.1.4",
     "sass": "^1.38.0",
     "tailwindcss": "^2.2.7",
     "ts-jest": "^27.0.5",
-    "ts-node": "^10.2.0",
-    "tsup": "^4.13.1",
     "typescript": "^4.3.5",
-    "vite": "^2.4.4",
-    "vite-tsconfig-paths": "^3.3.13",
+    "unplugin-vue-components": "^0.17.2",
+    "vite": "^2.6.14",
+    "vite-plugin-web-extension": "^0.7.2",
     "vue-global-api": "^0.2.4",
     "vue-tsc": "^0.2.2",
-    "web-ext": "^6.2.0",
     "zip-a-folder": "^1.1.0"
   }
 }
