--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "jest-mock-extended": "^2.0.4",
     "lodash.merge": "^4.6.2",
     "postcss": "^8.3.6",
+    "postcss-selector-parser": "^6.0.6",
     "prettier": "^2.3.2",
     "pretty-quick": "^3.1.1",
     "rimraf": "^3.0.2",
