--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -24,6 +24,7 @@ rules:
   import/no-unused-modules:
     - 'warn'
     - unusedExports: true
+  no-console: 'warn'
 
 overrides:
   - files: ['*.js']
@@ -58,3 +59,6 @@ overrides:
       vue/html-self-closing: 'off'
       vue/max-attributes-per-line: 'off'
       '@typescript-eslint/no-unused-vars': 'off'
+  - files: ['scripts/**']
+    rules:
+      no-console: 'off'
