fix: block keyboard shortcuts again
The keyboard shortcuts blocker needs to be injected at document start (so event listeners can be set before the pages). So they need to be in their own separate script

--- a/src/manifest.template.json
+++ b/src/manifest.template.json
@@ -41,6 +41,11 @@
       "js": ["content-scripts/parent.ts", "content-scripts/player.ts"],
       "css": ["generated:content-scripts/style.css"],
       "all_frames": true
+    },
+    {
+      "js": ["content-scripts/keyboard-shortcut-blocker.ts"],
+      "all_frames": true,
+      "run_at": "document_start"
     }
   ],
   "web_accessible_resources": ["assets/*", "assets/**/*"]
