--- a/.github/workflows/new-release.yml
+++ b/.github/workflows/new-release.yml
@@ -48,6 +48,7 @@ jobs:
 
       - name: Create Changelog
         id: changelog
+        if: ${{ github.event.inputs.dryRun != 'true' }}
         uses: TriPSs/conventional-changelog-action@v3
         with:
           github-token: ${{ secrets.github_token }}
@@ -56,7 +57,7 @@ jobs:
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
-        if: ${{ steps.changelog.outputs.skipped == 'false' }}
+        if: ${{ github.event.inputs.dryRun != 'true' && steps.changelog.outputs.skipped == 'false' }}
         env:
           GITHUB_TOKEN: ${{ secrets.github_token }}
         with:
@@ -65,7 +66,7 @@ jobs:
           body: ${{ steps.changelog.outputs.clean_changelog }}
 
       - name: Reset version bump after no release
-        if: ${{ steps.changelog.outputs.skipped == 'true' }}
+        if: ${{ github.event.inputs.dryRun != 'true' && steps.changelog.outputs.skipped == 'true' }}
         run: |
           git reset --hard ${{ github.head_ref }}
           git --no-pager log -n 20 --oneline
@@ -107,7 +108,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./artifacts/firefox-beta.zip
+          asset_path: ./artifacts/firefox-prod.zip
           asset_name: firefox.zip
           asset_content_type: application/zip
 
@@ -118,6 +119,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./artifacts/chrome-beta.zip
+          asset_path: ./artifacts/chrome-prod.zip
           asset_name: chrome.zip
           asset_content_type: application/zip
