--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -48,7 +48,8 @@
     "skippable",
     "unitless",
     "unmount",
-    "vrv"
+    "vrv",
+    "wakanim"
   ],
   "cSpell.ignoreWords": [
     "asynciterable",
