--- a/.github/workflows/verify-pr.yml
+++ b/.github/workflows/verify-pr.yml
@@ -3,6 +3,8 @@ on:
   push:
     branches-ignore:
       - main
+  pull_request:
+    types: [assigned, opened, synchronize, reopened]
 
 jobs:
   cancel:
