--- a/.github/workflows/verify-pr.yml
+++ b/.github/workflows/verify-pr.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches-ignore:
       - main
-  pull_request:
+  pull_request_target:
     types: [assigned, opened, synchronize, reopened]
 
 jobs:
