--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   },
   "dependencies": {
     "@anime-skip/api-client": "^2.6.1",
-    "@anime-skip/ui": "^1.2.9",
+    "@anime-skip/ui": "^2.0.3",
     "@anime-skip/usage-stats-client": "^1.3.1",
     "@vueuse/core": "^5.3.0",
     "async-mutex": "^0.3.2",
@@ -64,12 +64,13 @@
     "@types/md5": "^2.3.1",
     "@types/node": "^16.6.0",
     "@types/rimraf": "^3.0.2",
+    "@types/tailwindcss": "^3.0.0",
     "@types/webextension-polyfill": "^0.8.1",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
     "@vitejs/plugin-vue": "^1.4.0",
     "@vue/compiler-sfc": "^3.2.2",
-    "autoprefixer": "^10.3.1",
+    "autoprefixer": "^10.4.1",
     "concurrently": "^6.2.1",
     "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
@@ -85,18 +86,18 @@
     "jest": "^27.2.2",
     "jest-mock-extended": "^2.0.4",
     "lodash.merge": "^4.6.2",
-    "postcss": "^8.3.6",
+    "postcss": "^8.4.5",
     "postcss-selector-parser": "^6.0.6",
     "prettier": "^2.5.1",
     "pretty-quick": "^3.1.3",
     "rimraf": "^3.0.2",
     "sass": "^1.38.0",
-    "tailwindcss": "^2.2.7",
+    "tailwindcss": "^3.0.8",
     "ts-jest": "^27.0.5",
     "typescript": "^4.3.5",
     "unplugin-vue-components": "^0.17.2",
     "vite": "^2.6.14",
-    "vite-plugin-web-extension": "^1.0.2",
+    "vite-plugin-web-extension": "^1.0.3",
     "vue-global-api": "^0.2.4",
     "vue-tsc": "^0.2.2",
     "zip-a-folder": "^1.1.0"
