--- a/src/manifest.template.json
+++ b/src/manifest.template.json
@@ -20,8 +20,7 @@
   ],
   "background": {
     "{{chrome}}.service_worker": "background/index.ts",
-    "{{firefox}}.scripts": ["background/index.ts"],
-    "{{firefox}}.persistent": false
+    "{{firefox}}.scripts": ["background/index.ts"]
   },
   "{{chrome}}.action": {
     "default_popup": "popup/index.html"
