--- a/packages/web-extension/tsconfig.json
+++ b/packages/web-extension/tsconfig.json
@@ -1,19 +1,10 @@
 {
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "module": "ESNext",
-    "target": "ESNext",
-    "lib": ["DOM", "ESNext"],
-    "strict": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "forceConsistentCasingInFileNames": true,
     "types": ["vite/client", "jest", "vue-global-api"],
-    "baseUrl": ".",
     "paths": {
-      "~/*": ["src/*"],
-      "~api": ["src/common/api"]
+      "~/*": ["./src/*"],
+      "~api": ["./src/common/api"]
     }
   }
 }
