--- a/packages/web-extension/package.json
+++ b/packages/web-extension/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "anime-skip-player",
+  "name": "web-extension",
   "displayName": "Anime Skip Player",
   "description": "Skip intros, credits, filler and more on supported services",
   "version": "1.9.3",
