--- a/packages/web-extension/package.json
+++ b/packages/web-extension/package.json
@@ -43,6 +43,7 @@
     "async-mutex": "^0.3.2",
     "axios": "^0.24.0",
     "axios-auth-refresh": "^3.1.0",
+    "exponential-backoff": "^3.1.0",
     "fuzzysort": "^1.1.4",
     "lodash.isequal": "^4.5.0",
     "md5": "^2.3.0",
