--- a/.github/workflows/web-extension-release.yml
+++ b/.github/workflows/web-extension-release.yml
@@ -104,7 +104,7 @@ jobs:
           asset_content_type: application/zip
 
       - name: Upload firefox.zip
-        if: ${{ steps.changelog.outputs.skipped == 'false' }}
+        if: ${{ steps.changelog.outputs.skipped == 'false' && github.event.inputs.skipFirefox != 'true' }}
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -115,7 +115,7 @@ jobs:
           asset_content_type: application/zip
 
       - name: Upload chrome.zip
-        if: ${{ steps.changelog.outputs.skipped == 'false' }}
+        if: ${{ steps.changelog.outputs.skipped == 'false' && github.event.inputs.skipChrome != 'true' }}
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
