--- a/packages/player-ui/package.json
+++ b/packages/player-ui/package.json
@@ -1,5 +1,60 @@
 {
-  "name": "player-ui",
-  "private": true,
-  "version": "1.0.0"
+  "name": "@anime-skip/player-ui",
+  "version": "0.1.0",
+  "dependencies": {
+    "@anime-skip/api-client": "^2.6.2",
+    "@anime-skip/ui": "^3.1.1",
+    "@anime-skip/usage-stats-client": "^1.3.1",
+    "@vueuse/core": "^5.3.0",
+    "async-mutex": "^0.3.2",
+    "axios": "^0.24.0",
+    "axios-auth-refresh": "^3.1.0",
+    "fuzzysort": "^1.1.4",
+    "lodash.isequal": "^4.5.0",
+    "md5": "^2.3.0",
+    "vue": "^3.2.2",
+    "vue-router": "^4.0.11",
+    "vue-use-request-state": "^0.2.2"
+  },
+  "devDependencies": {
+    "@iconify/json": "^1.1.386",
+    "@tailwindcss/line-clamp": "^0.2.1",
+    "@types/jest": "^27.0.1",
+    "@types/lodash.isequal": "^4.5.5",
+    "@types/md5": "^2.3.1",
+    "@types/node": "^16.6.0",
+    "@types/tailwindcss": "^3.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.29.1",
+    "@typescript-eslint/parser": "^4.29.1",
+    "@vitejs/plugin-vue": "^1.4.0",
+    "@vue/compiler-sfc": "^3.2.2",
+    "autoprefixer": "^10.4.1",
+    "concurrently": "^6.2.1",
+    "cross-env": "^7.0.3",
+    "dotenv": "^10.0.0",
+    "eslint": "^7.32.0",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-only-warn": "^1.0.3",
+    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-vue": "^7.16.0",
+    "esno": "*",
+    "form-data": "^4.0.0",
+    "fs-extra": "^10.0.0",
+    "jest": "^27.2.2",
+    "jest-mock-extended": "^2.0.4",
+    "lodash.merge": "^4.6.2",
+    "postcss": "^8.4.5",
+    "postcss-selector-parser": "^6.0.6",
+    "rimraf": "^3.0.2",
+    "sass": "^1.38.0",
+    "tailwindcss": "^3.0.8",
+    "ts-jest": "^27.0.5",
+    "typescript": "^4.3.5",
+    "unplugin-vue-components": "^0.17.2",
+    "vite": "^2.6.14",
+    "vite-plugin-web-extension": "^1.0.5",
+    "vue-global-api": "^0.2.4",
+    "vue-tsc": "^0.2.2",
+    "zip-a-folder": "^1.1.0"
+  }
 }
