--- a/packages/web-extension/package.json
+++ b/packages/web-extension/package.json
@@ -45,12 +45,14 @@
     "axios-auth-refresh": "^3.1.0",
     "exponential-backoff": "^3.1.0",
     "fuzzysort": "^1.1.4",
+    "joi": "^17.6.0",
     "lodash.isequal": "^4.5.0",
     "md5": "^2.3.0",
     "vue": "^3.2.2",
     "vue-router": "^4.0.11",
     "vue-use-request-state": "^0.2.2",
-    "webextension-polyfill": "^0.8.0"
+    "webextension-polyfill": "^0.8.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@iconify/json": "^1.1.386",
