--- a/packages/web-extension/package.json
+++ b/packages/web-extension/package.json
@@ -45,6 +45,7 @@
     "axios-auth-refresh": "^3.1.0",
     "exponential-backoff": "^3.1.0",
     "fuzzysort": "^1.1.4",
+    "joi": "^17.6.0",
     "lodash.isequal": "^4.5.0",
     "md5": "^2.3.0",
     "vue": "^3.2.2",
