--- a/packages/web-extension/tsconfig.json
+++ b/packages/web-extension/tsconfig.json
@@ -1,18 +1,11 @@
 {
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "module": "ESNext",
-    "target": "ESNext",
     "lib": ["DOM", "ESNext"],
-    "strict": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "forceConsistentCasingInFileNames": true,
     "types": ["vite/client", "jest", "vue-global-api"],
     "paths": {
       "~/*": ["./src/*"],
-      "~api": ["./src/common/api"]
+      "~api": ["../common/src/api"]
     }
   }
 }
