--- a/packages/web-extension/package.json
+++ b/packages/web-extension/package.json
@@ -51,7 +51,8 @@
     "vue": "^3.2.2",
     "vue-router": "^4.0.11",
     "vue-use-request-state": "^0.2.2",
-    "webextension-polyfill": "^0.8.0"
+    "webextension-polyfill": "^0.8.0",
+    "common": "workspace:*"
   },
   "devDependencies": {
     "@iconify/json": "^1.1.386",
