--- a/packages/common/tsconfig.json
+++ b/packages/common/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "lib": ["DOM", "ESNext"]
+    "lib": ["DOM", "ESNext"],
+    "types": ["jest", "vue-global-api"]
   }
 }
