--- a/packages/web-extension/package.json
+++ b/packages/web-extension/package.json
@@ -43,16 +43,15 @@
     "async-mutex": "^0.3.2",
     "axios": "^0.24.0",
     "axios-auth-refresh": "^3.1.0",
+    "common": "workspace:*",
     "exponential-backoff": "^3.1.0",
     "fuzzysort": "^1.1.4",
-    "joi": "^17.6.0",
     "lodash.isequal": "^4.5.0",
     "md5": "^2.3.0",
     "vue": "^3.2.2",
     "vue-router": "^4.0.11",
     "vue-use-request-state": "^0.2.2",
-    "webextension-polyfill": "^0.8.0",
-    "common": "workspace:*"
+    "webextension-polyfill": "^0.8.0"
   },
   "devDependencies": {
     "@iconify/json": "^1.1.386",
