--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -7,10 +7,12 @@
   },
   "dependencies": {
     "@anime-skip/api-client": "^2.6.2",
-    "joi": "^17.6.0"
+    "joi": "^17.6.0",
+    "ua-parser-js": "^1.0.2"
   },
   "devDependencies": {
     "@types/jest": "^27.0.1",
+    "@types/ua-parser-js": "^0.7.36",
     "jest": "^27.2.2",
     "jest-mock-extended": "^2.0.4",
     "ts-jest": "^27.0.5",
