--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,8 +1,3 @@
 {
-  "recommendations": [
-    "johnsoncodehk.volar",
-    "antfu.iconify",
-    "dbaeumer.vscode-eslint",
-    "csstools.postcss"
-  ]
+  "recommendations": ["Vue.volar", "antfu.iconify", "dbaeumer.vscode-eslint", "csstools.postcss"]
 }
