--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -77,5 +77,8 @@
     "**/.hg": true,
     "**/CVS": true,
     "**/.DS_Store": true
+  },
+  "workbench.editorAssociations": {
+    ".env.package": "dotenv"
   }
 }
