--- a/packages/web-extension/package.json
+++ b/packages/web-extension/package.json
@@ -59,6 +59,7 @@
     "@tailwindcss/line-clamp": "^0.2.1",
     "@types/fs-extra": "^9.0.12",
     "@types/jest": "^27.0.1",
+    "@types/jsdom": "^16.2.14",
     "@types/lodash.isequal": "^4.5.5",
     "@types/lodash.merge": "^4.6.6",
     "@types/md5": "^2.3.1",
@@ -84,6 +85,7 @@
     "fs-extra": "^10.0.0",
     "jest": "^27.2.2",
     "jest-mock-extended": "^2.0.4",
+    "jsdom": "^19.0.0",
     "lodash.merge": "^4.6.2",
     "postcss": "^8.4.5",
     "postcss-selector-parser": "^6.0.6",
