feat(extension): added Zoro.to support (#237)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -47,7 +47,8 @@
     "skippable",
     "unitless",
     "unmount",
-    "vrv"
+    "vrv",
+    "zoro"
   ],
   "cSpell.ignoreWords": [
     "asynciterable",
