--- a/package.json
+++ b/package.json
@@ -12,5 +12,16 @@
     "husky": "^7.0.1",
     "prettier": "^2.5.1",
     "pretty-quick": "^3.1.3"
+  },
+  "pnpm": {
+    "peerDependencyRules": {
+      "ignoreMissing": [
+        "@types/download",
+        "body-parser",
+        "download",
+        "express",
+        "safe-compare"
+      ]
+    }
   }
 }
