--- a/packages/web-extension/package.json
+++ b/packages/web-extension/package.json
@@ -67,9 +67,10 @@
     "@types/rimraf": "^3.0.2",
     "@types/tailwindcss": "^3.0.0",
     "@types/webextension-polyfill": "^0.8.2",
-    "@typescript-eslint/eslint-plugin": "^4.29.1",
-    "@typescript-eslint/parser": "^4.29.1",
-    "@vitejs/plugin-vue": "^1.4.0",
+    "@typescript-eslint/eslint-plugin": "^5.22.0",
+    "@typescript-eslint/parser": "^5.22.0",
+    "@typescript/lib-dom": "npm:@types/web",
+    "@vitejs/plugin-vue": "^2.3.2",
     "@vue/compiler-sfc": "^3.2.2",
     "autoprefixer": "^10.4.1",
     "concurrently": "^6.2.1",
@@ -93,12 +94,12 @@
     "sass": "^1.38.0",
     "tailwindcss": "^3.0.8",
     "ts-jest": "^27.0.5",
-    "typescript": "^4.3.5",
+    "typescript": "^4.6.4",
     "unplugin-vue-components": "^0.19.3",
     "vite": "^2.9.8",
     "vite-plugin-web-extension": "^1.3.2",
     "vue-global-api": "^0.2.4",
-    "vue-tsc": "^0.2.2",
+    "vue-tsc": "^0.34.11",
     "zip-a-folder": "^1.1.0"
   }
 }
