--- a/package.json
+++ b/package.json
@@ -8,11 +8,6 @@
     "validate": "pnpm format:check",
     "prepare": "husky install"
   },
-  "dependencies": {
-    "husky": "^7.0.1",
-    "prettier": "^2.5.1",
-    "pretty-quick": "^3.1.3"
-  },
   "pnpm": {
     "peerDependencyRules": {
       "ignoreMissing": [
@@ -23,5 +18,10 @@
         "safe-compare"
       ]
     }
+  },
+  "devDependencies": {
+    "husky": "^7.0.4",
+    "prettier": "^2.6.2",
+    "pretty-quick": "^3.1.3"
   }
 }
