--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -16,7 +16,7 @@
     "jest": "^27.2.2",
     "jest-mock-extended": "^2.0.4",
     "ts-jest": "^27.0.5",
-    "typescript": "^4.3.5",
+    "typescript": "*",
     "vue-global-api": "^0.2.4"
   },
   "peerDependencies": {
