--- a/packages/inspector/package.json
+++ b/packages/inspector/package.json
@@ -9,9 +9,9 @@
   },
   "devDependencies": {
     "@types/lodash.debounce": "^4.0.7",
-    "typescript": "^4.6.4",
-    "vite": "^2.9.8",
-    "vite-plugin-web-extension": "^1.3.2"
+    "typescript": "*",
+    "vite": "*",
+    "vite-plugin-web-extension": "*"
   },
   "dependencies": {
     "lodash.debounce": "^4.0.8",
