--- a/packages/web-extension/.eslintrc.yml
+++ b/packages/web-extension/.eslintrc.yml
@@ -57,6 +57,7 @@ overrides:
       vue/html-indent: 'off'
       vue/html-self-closing: 'off'
       vue/max-attributes-per-line: 'off'
+      vue/multi-word-component-names: 'off'
       '@typescript-eslint/no-unused-vars': 'off'
   - files: ['scripts/**']
     rules:
