--- a/.github/workflows/verify-pr.yml
+++ b/.github/workflows/verify-pr.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - uses: actions/setup-node@v1
         with:
-          node-version: '14.x'
+          node-version: '16.x'
           registry-url: 'https://npm.pkg.github.com'
           scope: '@anime-skip'
 
@@ -28,22 +28,13 @@ jobs:
           key: ${{ runner.os }}-${{ hashFiles('**/pnpm-lock.yaml') }}
 
       - name: Install pnpm
-        run: curl -f https://get.pnpm.io/v6.14.js | node - add --global pnpm@6
+        run: npm i -g pnpm@7
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
         env:
           CI: true
           NODE_AUTH_TOKEN: ${{ secrets.ANIME_SKIP_PACKAGES_TOKEN }}
-
-      - name: Echo
-        run: |
-          echo "GITHUB_SHA $GITHUB_SHA"
-          echo "GITHUB_REF $GITHUB_REF"
-          echo "GITHUB_REF_NAME $GITHUB_REF_NAME"
-          echo "GITHUB_REF_PROTECTED $GITHUB_REF_PROTECTED"
-          echo "GITHUB_HEAD_REF $GITHUB_HEAD_REF"
-          echo "GITHUB_BASE_REF $GITHUB_BASE_REF"
 
       - name: Validate Packages
         run: pnpm recursive run validate --filter [origin/main]
