--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "anime-skip-player-monorepo",
   "private": true,
+  "engines": {
+    "node": ">=16",
+    "pnpm": ">=7"
+  },
   "scripts": {
     "format": "prettier --write .",
     "format:check": "prettier --check .",
@@ -8,9 +12,25 @@
     "validate": "pnpm format:check",
     "prepare": "husky install"
   },
-  "dependencies": {
-    "husky": "^7.0.1",
-    "prettier": "^2.5.1",
+  "pnpm": {
+    "overrides": {
+      "typescript": "^4.6.4",
+      "vite": "^2.9.8",
+      "vite-plugin-web-extension": "^1.3.2"
+    },
+    "peerDependencyRules": {
+      "ignoreMissing": [
+        "@types/download",
+        "body-parser",
+        "download",
+        "express",
+        "safe-compare"
+      ]
+    }
+  },
+  "devDependencies": {
+    "husky": "^7.0.4",
+    "prettier": "^2.6.2",
     "pretty-quick": "^3.1.3"
   }
 }
