--- a/packages/inspector/package.json
+++ b/packages/inspector/package.json
@@ -8,15 +8,10 @@
     "build:chrome": "TARGET=chrome vite build"
   },
   "devDependencies": {
-    "@types/download": "8.0.1",
     "@types/lodash.debounce": "^4.0.7",
-    "body-parser": "1.19.0",
-    "download": "8.0.0",
-    "express": "4.17.1",
-    "safe-compare": "1.1.4",
-    "typescript": "^4.3.5",
-    "vite": "^2.6.14",
-    "vite-plugin-web-extension": "^1.3.1"
+    "typescript": "*",
+    "vite": "*",
+    "vite-plugin-web-extension": "*"
   },
   "dependencies": {
     "lodash.debounce": "^4.0.8",
