--- a/packages/web-extension/package.json
+++ b/packages/web-extension/package.json
@@ -40,17 +40,17 @@
     "@anime-skip/api-client": "^2.6.2",
     "@anime-skip/ui": "^3.1.3",
     "@anime-skip/usage-stats-client": "^1.4.2",
-    "@vueuse/core": "^5.3.0",
+    "@vueuse/core": "^8.4.2",
     "async-mutex": "^0.3.2",
     "axios": "^0.24.0",
-    "axios-auth-refresh": "^3.1.0",
+    "axios-auth-refresh": "^3.2.2",
     "common": "workspace:*",
     "exponential-backoff": "^3.1.0",
     "fuzzysort": "^1.1.4",
     "lodash.isequal": "^4.5.0",
     "md5": "^2.3.0",
-    "vue": "^3.2.2",
-    "vue-router": "^4.0.11",
+    "vue": "^3.2.33",
+    "vue-router": "^4.0.15",
     "vue-use-request-state": "^0.2.2",
     "webextension-polyfill": "^0.8.0"
   },
@@ -67,19 +67,20 @@
     "@types/rimraf": "^3.0.2",
     "@types/tailwindcss": "^3.0.0",
     "@types/webextension-polyfill": "^0.8.2",
-    "@typescript-eslint/eslint-plugin": "^4.29.1",
-    "@typescript-eslint/parser": "^4.29.1",
-    "@vitejs/plugin-vue": "^1.4.0",
-    "@vue/compiler-sfc": "^3.2.2",
+    "@typescript-eslint/eslint-plugin": "^5.22.0",
+    "@typescript-eslint/parser": "^5.22.0",
+    "@typescript/lib-dom": "npm:@types/web",
+    "@vitejs/plugin-vue": "^2.3.2",
+    "@vue/compiler-sfc": "^3.2.33",
     "autoprefixer": "^10.4.1",
     "concurrently": "^6.2.1",
     "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-import": "^2.24.2",
+    "eslint": "^8.15.0",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-only-warn": "^1.0.3",
-    "eslint-plugin-promise": "^4.3.1",
-    "eslint-plugin-vue": "^7.16.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-vue": "^8.7.1",
     "esno": "*",
     "form-data": "^4.0.0",
     "fs-extra": "^10.0.0",
@@ -90,15 +91,15 @@
     "postcss": "^8.4.5",
     "postcss-selector-parser": "^6.0.6",
     "rimraf": "^3.0.2",
-    "sass": "^1.38.0",
+    "sass": "^1.51.0",
     "tailwindcss": "^3.0.8",
     "ts-jest": "^27.0.5",
-    "typescript": "^4.3.5",
-    "unplugin-vue-components": "^0.17.2",
-    "vite": "^2.6.14",
-    "vite-plugin-web-extension": "^1.0.5",
-    "vue-global-api": "^0.2.4",
-    "vue-tsc": "^0.2.2",
+    "typescript": "*",
+    "unplugin-vue-components": "^0.19.3",
+    "vite": "*",
+    "vite-plugin-web-extension": "*",
+    "vue-global-api": "^0.4.1",
+    "vue-tsc": "^0.34.11",
     "zip-a-folder": "^1.1.0"
   }
 }
