--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "overrides": {
       "typescript": "^4.6.4",
       "vite": "^2.9.8",
-      "vite-plugin-web-extension": "^1.3.2"
+      "vite-plugin-web-extension": "^1.3.2",
+      "vue": "^3.2.33"
     },
     "peerDependencyRules": {
       "ignoreMissing": [
