--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "@anime-skip/api-client": "^2.6.2",
     "joi": "^17.6.0",
-    "ua-parser-js": "^1.0.2"
+    "ua-parser-js": "^1.0.2",
+    "vue": "*"
   },
   "devDependencies": {
     "@types/jest": "^27.0.1",
