--- a/.github/workflows/web-extension-release.yml
+++ b/.github/workflows/web-extension-release.yml
@@ -23,20 +23,21 @@ jobs:
     name: Verify & Deploy
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/setup-node@v1
+      - name: Checkout Repo
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0 # Fetch everything so we can filter since a revision
+
+      - uses: pnpm/action-setup@v2.0.1
+        name: Install PNPM
+        with:
+          version: 7.0.0
+
+      - name: Install Node 16
+        uses: actions/setup-node@v2
         with:
           node-version: '16.x'
-
-      - uses: actions/checkout@v2
-
-      - name: Cache .pnpm-store
-        uses: actions/cache@v1
-        with:
-          path: ~/.pnpm-store
-          key: ${{ runner.os }}-${{ hashFiles('**/pnpm-lock.yaml') }}
-
-      - name: Install pnpm
-        run: curl -f https://get.pnpm.io/v6.14.js | node - add --global pnpm@6
+          cache: 'pnpm'
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
