fix: use packages from NPM (#240)

--- a/.github/workflows/verify-pr.yml
+++ b/.github/workflows/verify-pr.yml
@@ -11,37 +11,32 @@ jobs:
     name: Verify Code
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/setup-node@v1
-        with:
-          node-version: '16.x'
-          registry-url: 'https://npm.pkg.github.com'
-          scope: '@anime-skip'
-
-      - uses: actions/checkout@v2
+      - name: Checkout Repo
+        uses: actions/checkout@v2
         with:
           fetch-depth: 0 # Fetch everything so we can filter since a revision
 
-      - name: Cache .pnpm-store
-        uses: actions/cache@v1
+      - uses: pnpm/action-setup@v2.0.1
+        name: Install PNPM
         with:
-          path: ~/.pnpm-store
-          key: ${{ runner.os }}-${{ hashFiles('**/pnpm-lock.yaml') }}
+          version: 7.0.0
 
-      - name: Install pnpm
-        run: npm i -g pnpm@7
+      - name: Install Node 16
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16.x'
+          cache: 'pnpm'
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
         env:
           CI: true
-          NODE_AUTH_TOKEN: ${{ secrets.ANIME_SKIP_PACKAGES_TOKEN }}
 
       - name: Validate Packages
         run: pnpm recursive run validate --filter [origin/main]
         env:
           CI: true
           PACKAGE_MODE: prod
-          NODE_AUTH_TOKEN: ${{ secrets.ANIME_SKIP_PACKAGES_TOKEN }}
           FIREFOX_SIGNING_ISSUER: ${{ secrets.FIREFOX_SIGNING_ISSUER }}
           FIREFOX_SIGNING_SECRET: ${{ secrets.FIREFOX_SIGNING_SECRET }}
           FIREFOX_SIGNING_ID: ${{ secrets.FIREFOX_SIGNING_ID }}
