--- a/packages/web-extension/package.json
+++ b/packages/web-extension/package.json
@@ -38,8 +38,8 @@
   },
   "dependencies": {
     "@anime-skip/api-client": "^2.6.2",
-    "@anime-skip/ui": "^3.1.3",
-    "@anime-skip/usage-stats-client": "^1.4.2",
+    "@anime-skip/ui": "^3.1.5",
+    "@anime-skip/usage-stats-client": "^1.4.4",
     "@vueuse/core": "^8.4.2",
     "async-mutex": "^0.3.2",
     "axios": "^0.24.0",
@@ -49,7 +49,7 @@
     "fuzzysort": "^1.1.4",
     "lodash.isequal": "^4.5.0",
     "md5": "^2.3.0",
-    "vue": "^3.2.33",
+    "vue": "*",
     "vue-router": "^4.0.15",
     "vue-use-request-state": "^0.2.2",
     "webextension-polyfill": "^0.8.0"
