--- a/.github/workflows/verify-pr.yml
+++ b/.github/workflows/verify-pr.yml
@@ -1,25 +1,21 @@
 name: Verify PR
 on:
   push:
-    branches-ignore:
-      - main
   pull_request_target:
     types: [assigned, opened, synchronize, reopened]
 
 jobs:
-  verify:
-    name: Verify Code
+  verify-root:
+    name: Verify Monorepo Root
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v2
-        with:
-          fetch-depth: 0 # Fetch everything so we can filter since a revision
 
       - uses: pnpm/action-setup@v2.0.1
         name: Install PNPM
         with:
-          version: 7.0.0
+          version: 7.x.x
 
       - name: Install Node 16
         uses: actions/setup-node@v2
@@ -27,20 +23,78 @@ jobs:
           node-version: '16.x'
           cache: 'pnpm'
 
-      - name: Install dependencies
+      - name: Install Dependencies
         run: pnpm install --frozen-lockfile
-        env:
-          CI: true
 
-      - name: Validate Packages
-        run: pnpm recursive run validate --filter [origin/main]
-        env:
-          CI: true
-          PACKAGE_MODE: prod
-          FIREFOX_SIGNING_ISSUER: ${{ secrets.FIREFOX_SIGNING_ISSUER }}
-          FIREFOX_SIGNING_SECRET: ${{ secrets.FIREFOX_SIGNING_SECRET }}
-          FIREFOX_SIGNING_ID: ${{ secrets.FIREFOX_SIGNING_ID }}
-          CHROME_CLIENT_ID: ${{ secrets.CHROME_CLIENT_ID }}
-          CHROME_CLIENT_SECRET: ${{ secrets.CHROME_CLIENT_SECRET }}
-          CHROME_REFRESH_TOKEN: ${{ secrets.CHROME_REFRESH_TOKEN }}
-          CHROME_APP_ID: ${{ secrets.CHROME_APP_ID }}
+      - name: Formatting
+        run: pnpm format:check
+
+  verify-web-extension:
+    name: Verify packages/web-extension
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v2
+
+      - uses: pnpm/action-setup@v2.0.1
+        name: Install PNPM
+        with:
+          version: 7.x.x
+
+      - name: Install Node 16
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16.x'
+          cache: 'pnpm'
+
+      - name: Install Dependencies
+        run: pnpm install --frozen-lockfile
+
+      - name: Lint
+        run: pnpm lint:check
+        working-directory: packages/web-extension
+
+      - name: Compile
+        run: pnpm compile
+        working-directory: packages/web-extension
+
+      - name: Build Firefox
+        run: pnpm build
+        working-directory: packages/web-extension
+
+      - name: Build Chrome
+        run: pnpm build:chrome
+        working-directory: packages/web-extension
+
+      - name: Test
+        run: pnpm test
+        working-directory: packages/web-extension
+
+  verify-common:
+    name: Verify packages/common
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v2
+
+      - uses: pnpm/action-setup@v2.0.1
+        name: Install PNPM
+        with:
+          version: 7.x.x
+
+      - name: Install Node 16
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16.x'
+          cache: 'pnpm'
+
+      - name: Install Dependencies
+        run: pnpm install --frozen-lockfile
+
+      - name: Compile
+        run: pnpm compile
+        working-directory: packages/common
+
+      - name: Test
+        run: pnpm test
+        working-directory: packages/common
