--- a/packages/web-extension/package.json
+++ b/packages/web-extension/package.json
@@ -33,8 +33,7 @@
     "build:staged:chrome": "cross-env BUILD_FOR=chrome pnpm build:staged",
     "zip-sources": "esno scripts/zip-sources.ts",
     "package": "esno scripts/package/index.ts",
-    "package:dry": "cross-env DRY_RUN=true pnpm package",
-    "validate": "pnpm package:dry"
+    "package:dry": "cross-env DRY_RUN=true pnpm package"
   },
   "dependencies": {
     "@anime-skip/api-client": "^2.6.2",
