--- a/packages/web-extension/package.json
+++ b/packages/web-extension/package.json
@@ -72,6 +72,7 @@
     "@vitejs/plugin-vue": "^2.3.2",
     "@vue/compiler-sfc": "^3.2.33",
     "autoprefixer": "^10.4.1",
+    "caniuse-lite": "^1.0.30001352",
     "concurrently": "^6.2.1",
     "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
