fix(extension): parent of zoro must be injected onto top frame
This was preventing the extension from finding the episode name. Essentially, there were lots of frames that matched the parent URL, and it was preventing the right one (with episode details) from running

--- a/packages/web-extension/src/manifest.template.json
+++ b/packages/web-extension/src/manifest.template.json
@@ -37,9 +37,13 @@
   "{{chrome}}.options_page": "options/index.html",
   "content_scripts": [
     {
-      "js": ["content-scripts/parent.ts", "content-scripts/player.ts"],
+      "js": ["content-scripts/player.ts"],
       "css": ["generated:content-scripts/style.css"],
       "all_frames": true
+    },
+    {
+      "js": ["content-scripts/parent.ts"],
+      "all_frames": false
     },
     {
       "js": ["content-scripts/keyboard-shortcut-blocker.ts"],
