chore: upgrade dependencies and use vitest for testing

--- a/packages/common/tsconfig.json
+++ b/packages/common/tsconfig.json
@@ -1,7 +1,6 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "lib": ["DOM", "ESNext"],
-    "types": ["jest", "vue-global-api"]
+    "lib": ["DOM", "ESNext"]
   }
 }
