--- a/packages/web-extension/package.json
+++ b/packages/web-extension/package.json
@@ -18,8 +18,7 @@
     "dev:chrome": "concurrently --kill-others-on-fail -n extension,services -c magenta,cyan \"cross-env BUILD_FOR=chrome pnpm dev:extension\" \"pnpm dev:services\"",
     "dev:services": "docker-compose -f docker/docker-compose.yml up --abort-on-container-exit",
     "compile": "vue-tsc --noEmit",
-    "test": "jest --runInBand",
-    "test:watch": "jest --runInBand --watchAll",
+    "test": "vitest",
     "test:e2e": "echo 'TODO'",
     "lint": "eslint . --ext .ts,.vue --max-warnings 0 --fix",
     "lint:check": "eslint . --ext .js,.ts,.vue --max-warnings 0",
@@ -51,13 +50,12 @@
     "vue": "*",
     "vue-router": "^4.0.15",
     "vue-use-request-state": "^0.2.2",
-    "webextension-polyfill": "^0.8.0"
+    "webextension-polyfill": "*"
   },
   "devDependencies": {
     "@iconify/json": "^1.1.386",
     "@tailwindcss/line-clamp": "^0.2.1",
     "@types/fs-extra": "^9.0.12",
-    "@types/jest": "^27.0.1",
     "@types/jsdom": "^16.2.14",
     "@types/lodash.isequal": "^4.5.5",
     "@types/lodash.merge": "^4.6.6",
@@ -84,21 +82,21 @@
     "esno": "*",
     "form-data": "^4.0.0",
     "fs-extra": "^10.0.0",
-    "jest": "^27.2.2",
-    "jest-mock-extended": "^2.0.4",
-    "jsdom": "^19.0.0",
+    "jsdom": "*",
     "lodash.merge": "^4.6.2",
     "postcss": "^8.4.5",
     "postcss-selector-parser": "^6.0.6",
     "rimraf": "^3.0.2",
     "sass": "^1.51.0",
     "tailwindcss": "^3.0.8",
-    "ts-jest": "^27.0.5",
     "typescript": "*",
     "unplugin-vue-components": "^0.19.3",
     "vite": "*",
     "vite-plugin-web-extension": "*",
-    "vue-global-api": "^0.4.1",
+    "vite-tsconfig-paths": "^3.5.0",
+    "vitest": "*",
+    "vitest-mock-extended": "*",
+    "vue-global-api": "*",
     "vue-tsc": "^0.34.11",
     "zip-a-folder": "^1.1.0"
   }
