--- a/package.json
+++ b/package.json
@@ -13,10 +13,15 @@
   },
   "pnpm": {
     "overrides": {
+      "jsdom": "^19.0.0",
       "typescript": "^4.6.4",
       "vite": "^2.9.8",
       "vite-plugin-web-extension": "^1.3.2",
-      "vue": "^3.2.33"
+      "vitest": "^0.18.1",
+      "vitest-mock-extended": "^0.1.10",
+      "vue": "^3.2.33",
+      "vue-global-api": "^0.4.1",
+      "webextension-polyfill": "^0.9.0"
     },
     "peerDependencyRules": {
       "ignoreMissing": [
