--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -2,8 +2,7 @@
   "name": "common",
   "scripts": {
     "compile": "tsc --noEmit",
-    "test": "jest --runInBand",
-    "test:watch": "jest --runInBand --watchAll"
+    "test": "vitest"
   },
   "dependencies": {
     "@anime-skip/api-client": "^2.6.2",
@@ -12,15 +11,10 @@
     "vue": "*"
   },
   "devDependencies": {
-    "@types/jest": "^27.0.1",
     "@types/ua-parser-js": "^0.7.36",
-    "jest": "^27.2.2",
-    "jest-mock-extended": "^2.0.4",
-    "ts-jest": "^27.0.5",
+    "jsdom": "*",
     "typescript": "*",
-    "vue-global-api": "^0.2.4"
-  },
-  "peerDependencies": {
-    "vue-global-api": "^0.2.4"
+    "vitest": "*",
+    "vitest-mock-extended": "*"
   }
 }
