--- a/packages/inspector/package.json
+++ b/packages/inspector/package.json
@@ -15,6 +15,6 @@
   },
   "dependencies": {
     "lodash.debounce": "^4.0.8",
-    "webextension-polyfill": "^0.8.0"
+    "webextension-polyfill": "*"
   }
 }
